--- a/currency-conversion-service/pom.xml
+++ b/currency-conversion-service/pom.xml
@@ -9,18 +9,26 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>de.alice</groupId>
-    <artifactId>spring-cloud-config-server</artifactId>
+    <artifactId>currency-conversion-service</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>spring-cloud-config-server</name>
-    <description>spring-cloud-config-server</description>
+    <name>currency-conversion-service</name>
+    <description>currency-conversion-service</description>
     <properties>
         <java.version>17</java.version>
         <spring-cloud.version>2023.0.0-RC1</spring-cloud.version>
     </properties>
     <dependencies>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.cloud</groupId>
-            <artifactId>spring-cloud-config-server</artifactId>
+            <artifactId>spring-cloud-starter-config</artifactId>
         </dependency>
 
         <dependency>
