--- a/currency-exchange-service/pom.xml
+++ b/currency-exchange-service/pom.xml
@@ -8,7 +8,7 @@
         <version>3.2.0</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.example</groupId>
+    <groupId>de.alice</groupId>
     <artifactId>currency-exchange-service</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>currency-exchange-service</name>
