--- a/currency-exchange-service/src/main/resources/application.properties
+++ b/currency-exchange-service/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=currency-exchange
 server.port=8000
 spring.config.import=optional:configserver:http://localhost:8888
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 
 spring.jpa.defer-datasource-initialization=true
 spring.jpa.show-sql=true
