--- a/currency-exchange-service/src/main/resources/application.properties
+++ b/currency-exchange-service/src/main/resources/application.properties
@@ -3,6 +3,13 @@ server.port=8000
 spring.config.import=optional:configserver:http://localhost:8888
 eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka
 
+resilience4j.retry.instances.sample-api.maxAttempts=5
+resilience4j.retry.instances.sample-api.waitDuration=1s
+resilience4j.retry.instances.sample-api.enableExponentialBackoff=true
+resilience4j.ratelimiter.instances.sample-api.limitForPeriod=3
+resilience4j.ratelimiter.instances.sample-api.limit-refresh-period=10s
+resilience4j.bulkhead.instances.sample-api.maxConcurrentCalls=10
+
 spring.jpa.defer-datasource-initialization=true
 spring.jpa.show-sql=true
 spring.datasource.url=jdbc:h2:mem:testdb
