--- a/currency-exchange-service-kubernetes/src/main/resources/application.properties
+++ b/currency-exchange-service-kubernetes/src/main/resources/application.properties
@@ -19,3 +19,7 @@ spring.jpa.defer-datasource-initialization=true
 spring.jpa.show-sql=true
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.h2.console.enabled=true
+
+management.endpoint.health.probes.enabled=true
+management.health.livenessstate.enabled=true
+management.health.readinessstate.enabled=true
