--- a/currency-exchange-service-kubernetes/deployment.yaml
+++ b/currency-exchange-service-kubernetes/deployment.yaml
@@ -2,21 +2,13 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   annotations:
-    autopilot.gke.io/resource-adjustment: '{"input":{"containers":[{"name":"currency-exchange-service-kubernetes"}]},"output":{"containers":[{"limits":{"cpu":"500m","ephemeral-storage":"1Gi","memory":"2Gi"},"requests":{"cpu":"500m","ephemeral-storage":"1Gi","memory":"2Gi"},"name":"currency-exchange-service-kubernetes"}]},"modified":true}'
-    autopilot.gke.io/warden-version: 2.7.41
     deployment.kubernetes.io/revision: "1"
-  creationTimestamp: "2023-12-30T18:20:06Z"
-  generation: 1
   labels:
     app: currency-exchange
   name: currency-exchange
   namespace: default
-  resourceVersion: "2828240"
-  uid: b378a210-3546-43de-9ff4-1e8bda3d9852
 spec:
-  progressDeadlineSeconds: 600
-  replicas: 1
-  revisionHistoryLimit: 10
+  replicas: 2
   selector:
     matchLabels:
       app: currency-exchange
@@ -27,7 +19,6 @@ spec:
     type: RollingUpdate
   template:
     metadata:
-      creationTimestamp: null
       labels:
         app: currency-exchange
     spec:
@@ -35,87 +26,24 @@ spec:
       - image: blueirongirl/currency-exchange-service-kubernetes:0.0.1-SNAPSHOT
         imagePullPolicy: IfNotPresent
         name: currency-exchange-service-kubernetes
-        resources:
-          limits:
-            cpu: 500m
-            ephemeral-storage: 1Gi
-            memory: 2Gi
-          requests:
-            cpu: 500m
-            ephemeral-storage: 1Gi
-            memory: 2Gi
-        securityContext:
-          capabilities:
-            drop:
-            - NET_RAW
-        terminationMessagePath: /dev/termination-log
-        terminationMessagePolicy: File
-      dnsPolicy: ClusterFirst
       restartPolicy: Always
-      schedulerName: default-scheduler
-      securityContext:
-        seccompProfile:
-          type: RuntimeDefault
-      terminationGracePeriodSeconds: 30
-      tolerations:
-      - effect: NoSchedule
-        key: kubernetes.io/arch
-        operator: Equal
-        value: amd64
-status:
-  availableReplicas: 1
-  conditions:
-  - lastTransitionTime: "2023-12-30T18:20:13Z"
-    lastUpdateTime: "2023-12-30T18:20:13Z"
-    message: Deployment has minimum availability.
-    reason: MinimumReplicasAvailable
-    status: "True"
-    type: Available
-  - lastTransitionTime: "2023-12-30T18:20:06Z"
-    lastUpdateTime: "2023-12-30T18:20:13Z"
-    message: ReplicaSet "currency-exchange-6d7d9cbd4c" has successfully progressed.
-    reason: NewReplicaSetAvailable
-    status: "True"
-    type: Progressing
-  observedGeneration: 1
-  readyReplicas: 1
-  replicas: 1
-  updatedReplicas: 1
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  annotations:
-    cloud.google.com/neg: '{"ingress":true}'
-  creationTimestamp: "2023-12-30T18:21:13Z"
-  finalizers:
-    - service.kubernetes.io/load-balancer-cleanup
   labels:
     app: currency-exchange
   name: currency-exchange
   namespace: default
-  resourceVersion: "2829355"
-  uid: 16754756-079c-4633-94c7-1480be7ec0c5
 spec:
-  allocateLoadBalancerNodePorts: true
-  clusterIP: 34.118.234.70
-  clusterIPs:
-    - 34.118.234.70
-  externalTrafficPolicy: Cluster
-  internalTrafficPolicy: Cluster
   ipFamilies:
     - IPv4
   ipFamilyPolicy: SingleStack
   ports:
-    - nodePort: 30649
-      port: 8000
+    - port: 8000
       protocol: TCP
       targetPort: 8000
   selector:
     app: currency-exchange
   sessionAffinity: None
   type: LoadBalancer
-status:
-  loadBalancer:
-    ingress:
-      - ip: 34.34.139.203
