--- a/currency-conversion-service-kubernetes/deployment.yaml
+++ b/currency-conversion-service-kubernetes/deployment.yaml
@@ -8,7 +8,7 @@ metadata:
   name: currency-conversion
   namespace: default
 spec:
-  replicas: 2
+  replicas: 1
   selector:
     matchLabels:
       app: currency-conversion
@@ -23,9 +23,12 @@ spec:
         app: currency-conversion
     spec:
       containers:
-      - image: blueirongirl/currency-conversion-service-kubernetes:0.0.1-SNAPSHOT
+      - image: blueirongirl/currency-conversion-service-kubernetes:0.0.2-SNAPSHOT
         imagePullPolicy: IfNotPresent
         name: currency-conversion-service-kubernetes
+        env:
+          - name: CURRENCY_EXCHANGE_URI
+            value: http://currency-exchange
       restartPolicy: Always
 ---
 apiVersion: v1
